Yml files/car-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-api-deployment
spec:
  selector:
    matchLabels:
      app: car-api-pod
  template:
    metadata:
      labels:
        app: car-api-pod
    spec:
      containers:
      - name: car-api-container
        image: andrejkaravida/car-api:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: car-api-service
spec:
  selector:
    app: car-api-pod
  ports:
  - port: 5001
    targetPort: 80
  type: ClusterIP
